[package]
name = "uni_algodat_notes"
version = "0.1.0"
authors = ["Felicitas Pojtinger <felicitas@pojtinger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name="algorithms-binary-search"
path="cmd/algorithms-binary-search/main.rs"

[[bin]]
name="algorithms-binary"
path="cmd/algorithms-binary/main.rs"

[[bin]]
name="algorithms-trim-whitespace"
path="cmd/algorithms-trim-whitespace/main.rs"
